<resources>
    <string name="app_name">Android Lab 1</string>
    <string name="times_new_roman">times_new_roman</string>
    <string name="arial">arial</string>
    <string name="comic_sans">comic_sans</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
</resources>