<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment">

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:checkedButton="@+id/times_new_roman">

        <RadioButton
            android:id="@+id/times_new_roman"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/times_new_roman" />

        <RadioButton
            android:id="@+id/arial"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/arial" />

        <RadioButton
            android:id="@+id/comic_sans"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/comic_sans" />
    </RadioGroup>

</FrameLayout>